Fix for margins when click on menu button in header

--- a/src/app/alerts/alerts.template.html
+++ b/src/app/alerts/alerts.template.html
@@ -1,4 +1,4 @@
-<div class="usa-grid alerts-page">
+<div class="usa-grid alerts-page p_B-3x">
   <!-- the first child cannot have a margin or the overlay breaks -->
   <div style="height: 1px"></div>
 
