--- a/src/styles/components/_authentication.scss
+++ b/src/styles/components/_authentication.scss
@@ -7,8 +7,8 @@
 @import 'authentication/profile';
 
 .usa-authentication {
-  margin-top: 80px;
-  margin-bottom: 80px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 
   > .usa-grid {
     margin-top: 30px;
