--- a/src/styles/components/_header-links.scss
+++ b/src/styles/components/_header-links.scss
@@ -8,7 +8,7 @@ $header-link-height: 40px - 1; /* Compensate for Header border */
 
   .dropdown {
     position: absolute;
-    top: 44px;
+    top: 88%;
     left: -80px;
     background: $color-white;
     z-index: 2000;
@@ -43,13 +43,14 @@ $header-link-height: 40px - 1; /* Compensate for Header border */
   .arrow-up {
     position: absolute;
     margin: 0;
-    top: 36px;
+    top: 75%;
     left: 0;
     width: 0;
     height: 0;
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
     border-bottom: 8px solid white;
+    z-index: 2000;
   }
 
   .header-link,
