added # symbol for revision label

--- a/src/app/wage-determination/wage-determination.page.html
+++ b/src/app/wage-determination/wage-determination.page.html
@@ -38,7 +38,7 @@
         <div class="usa-width-one-half">
           <ul class="usa-unstyled-list">
             <li *ngIf = "wageDetermination.revisionNumber">
-              <strong>Revision: </strong>
+              <strong>Revision #: </strong>
               {{wageDetermination.revisionNumber}}
             </li>
             <li *ngIf = "services">
