--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -40,6 +40,7 @@
 @import 'components/modal';
 @import 'components/alphabet-selector';
 @import 'components/history';
+@import 'components/toggle-switch';
 
 @import 'pages/entity-object-view';
 @import 'pages/exclusion';
@@ -136,7 +137,7 @@ h2{
 
 .search-layout{
   .showing-results-meta{
-    margin-top:3rem!important;  
+    margin-top:3rem!important;
   }
   samselect{
     label{
