--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -1,8 +1,8 @@
 <h2>Reset Password</h2>
 <div>
   <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="reset()" class="usa-form-large usa-form-password" autocomplete="off">
-    <fieldset>
-      <sam-password #passwordEntry [currentPassword]="passwordForm.controls.currentPassword" [password]="passwordForm.controls.newPassword"></sam-password>
+    <fieldset #formControl>
+      <sam-password [currentPassword]="passwordForm.controls.currentPassword" [password]="passwordForm.controls.newPassword"></sam-password>
     </fieldset>
     <fieldset>
       <div class="usa-button-controls">
@@ -12,8 +12,9 @@
     <samAlert [type]="states.alert.type"
               [title]="states.alert.title"
               [hidden]="!states.alert.show"
-              [target]="passwordEntry"
-              placement="bottom right"
+              [target]="formControl"
+              [offset]="{ left: 40, top: -30 }"
+              placement="bottom center"
               showClose="true"></samAlert>
   </form>
 </div>
