FH - hyperlinks disabled for Sub-tier Agencies

--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -55,7 +55,8 @@
         </div>
         <ul class="usa-zebra-list">
           <li *ngFor = "let element of organizationPerPage">
-            <a [routerLink]="['/organization', element.orgId]" [queryParams]="qParams">{{ element.name }} </a>
+            {{ element.name }}
+            <!--<a [routerLink]="['/organization', element.orgId]" [queryParams]="qParams">{{ element.name }} </a>-->
           </li>
         </ul>
       </section>
