--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -1,3 +1,27 @@
+<aside class="usa-width-one-sixth">
+  <div>&nbsp;</div>
+  <div sam-sticky limit=1200 container="occupy-page">
+    <!--Side Navigation-->
+    <nav>
+      <ul class="usa-sidenav-list">
+        <li><samAccordion [expandIndex]="0" [bordered]="true">
+          <samAccordionSection headerText="Status" name="aria-friendly-section-name-2">
+          <samCheckbox
+          [(model)]="checkboxModel"
+          [name]="checkboxConfig.name"
+          [options]="checkboxConfig.options"
+          [label]="checkboxConfig.label"
+          [hint]="checkboxConfig.hint"
+          [errorMessage]="checkboxConfig.errorMessage"
+          [hasSelectAll]="checkboxConfig.hasSelectAll"
+          (modelChange)="activeFilter($event)">
+        </samCheckbox></samAccordionSection></samAccordion></li>
+      </ul>
+    </nav>
+  </div>
+</aside>
+
+
 <div class="usa-grid search-page">
 	<div class="usa-width-one">
 		<h1 class="m_T-0 p_T-6x">SAM.gov Search Results</h1>
