--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -55,8 +55,7 @@
         </div>
         <ul class="usa-zebra-list">
           <li *ngFor = "let element of organizationPerPage">
-            {{ element.name }}
-            <!--<a [routerLink]="['/organization', element.orgId]" [queryParams]="qParams">{{ element.name }} </a>-->
+            <a [routerLink]="['/organization', element.orgId]" [queryParams]="qParams">{{ element.name }} </a>
           </li>
         </ul>
       </section>
