Inactive alerts whip

--- a/src/styles/components/_toggle-switch.scss
+++ b/src/styles/components/_toggle-switch.scss
@@ -1,8 +1,8 @@
 .sam-toggle-switch{
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 30px;
+    width: 40px;
+    height: 20px;
 
 
   .switch-input {display:none;}
@@ -10,12 +10,12 @@
   .switch-label {
     position: absolute;
     cursor: pointer;
-    top: 0;
+    top: 4px;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: -4px;
     background-color: $color-white;
-    border: 1px solid $color-primary;
+    border: 2px solid rgb(17, 46, 81);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -23,33 +23,33 @@
   .switch-label:before {
     position: absolute;
     content: "";
-    height: 30px;
-    width: 30px;
-    left: 0px;
-    bottom: -1px;
+    height: 20px;
+    width: 20px;
+    left: -2px;
+    bottom: -2px;
     background-color: white;
-    border: 1px solid $color-primary;
+    border: 2px solid rgb(17, 46, 81);
     -webkit-transition: .4s;
     transition: .4s;
   }
 
   .switch-input:checked + .switch-label {
-    background-color: $color-primary;
+    background-color: rgb(17, 46, 81);
   }
 
   .switch-input:focus + .switch-label {
-    box-shadow: 0 0 1px $color-primary;
+    box-shadow: 0 0 1px rgb(17, 46, 81);
   }
 
   .switch-input:checked + .switch-label:before {
-    -webkit-transform: translateX(30px);
-    -ms-transform: translateX(30px);
-    transform: translateX(30px);
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
   }
 
   /* Rounded sliders */
   .switch-label{
-    border-radius: 30px;
+    border-radius: 24px;
   }
 
   .switch-label:before {
