--- a/src/styles/components/alert/_item.scss
+++ b/src/styles/components/alert/_item.scss
@@ -31,6 +31,7 @@
     top: -10px;
   }
 
+
   .expire-alert-note{
     width: 47%;
     border: 1px solid $color-black;
@@ -64,6 +65,14 @@ alert-item {
     display: inline-block;
     padding: 4px;
     border: 1px solid black;
+  }
+
+  .expire-alert-text {
+    display: inline-block;
+    color: rgb(17, 46, 81);
+    font-size: 1.7rem;
+    font-weight: 700;
+    line-height: 1;
   }
 
 }
