--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -4,6 +4,8 @@
       <i class="alert-type-icon fa" [ngClass]="alert.iconClass()"></i>{{alert.severity()}}
     </div>
     <div class="pull-right">
+      <span *ngIf="isAdmin && isActiveAlert()" class="expire-alert-text">Expire</span>
+      <sam-toggle-switch *ngIf="isAdmin && isActiveAlert()" (switchStatusChange)="OnSwitchChange($event)" [disableSwitch]="switchDisable"></sam-toggle-switch>
       <button *ngIf="isAdmin" class="usa-button-transparent" (click)="onEditClick()" [ngClass]="editDisabled && 'usa-button-transparent-disabled'"><span>Edit</span>&nbsp;<i class="fa fa-pencil"></i></button>
     </div>
   </div>
