--- a/src/app/alerts/alerts.template.html
+++ b/src/app/alerts/alerts.template.html
@@ -2,6 +2,9 @@
   <!-- the first child cannot have a margin or the overlay breaks -->
   <div style="height: 1px"></div>
 
+  <samModal #expireModal [type]="modalWindowConfig.type" [description]="modalWindowConfig.description" [title]="modalWindowConfig.title" [cancelButtonLabel]="'Cancel'" [submitButtonLabel]="'Expire'" (onSubmit)="onExpireConfirm()" (onClose)="onExpireCancel()"></samModal>
+
+
   <h1 class="alert-page-title">System Alerts</h1>
   <div class="alerts-toolbar">
     <div class="toolbar-item">
@@ -35,7 +38,8 @@
   </div>
   <div *ngFor="let alert of alerts" class="alert-block">
     <alert-edit *ngIf="alertBeingEdited && alertBeingEdited === alert" [mode]="'edit'" (cancel)="onAlertCancel()" (accept)="onEditAlertAccept($event)" [alert]="alertBeingEdited"></alert-edit>
-    <alert-item [isAdmin]="isAdmin()" [alert]="alert" *ngIf="alertBeingEdited !== alert" (edit)="onAlertEdit($event)" [editDisabled]="alertBeingEdited"></alert-item>
+    <alert-item [isAdmin]="isAdmin()" [alert]="alert" *ngIf="alertBeingEdited !== alert" (edit)="onAlertEdit($event)" (showExpireModal)="onShowExpireModal($event)" [editDisabled]="alertBeingEdited"></alert-item>
   </div>
   <samPagination [disabled]='alertBeingEdited' *ngIf='totalPages() > 1' [(currentPage)]="currentPage" [totalPages]="totalPages()" (pageChange)="onParamChanged($event)"></samPagination>
+
 </div>
