--- a/src/styles/pages/_assistance-listing.scss
+++ b/src/styles/pages/_assistance-listing.scss
@@ -16,7 +16,7 @@
   .historyDetails {
     float:right;
   }
-  
+
   .designation {
     background-color: #e4e2e0;
     padding: 15px;
@@ -28,6 +28,10 @@
 
   table thead th{
     min-width: 120px;
+  }
+
+  #program-related-na{
+    display: inline;
   }
 }
 
