--- a/src/app/app-components/workspace-layout/workspace-layout.template.html
+++ b/src/app/app-components/workspace-layout/workspace-layout.template.html
@@ -1,6 +1,6 @@
 <div class="usa-grid">
 	<header class="usa-width-one-whole" [ngClass]="setOffset()">
-		{{searchTitle}}
+		{{titleText}}
 	</header>
 	<main>
 		<aside class="side-filters"[ngClass]="setAsideWidth()">
