--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -1,13 +1,13 @@
 <div class="usa-grid search-page">
-  
+
   <aside class="usa-width-one-fourth">
     <div>&nbsp;</div>
     <div sam-sticky limit=1200 container="occupy-page">
       <nav>
         <ul class="usa-sidenav-list">
           <li>
-            <samAccordion [expandIndex]="0" [bordered]="true">
-              <samAccordionSection headerText="Status" name="aria-friendly-section-name-2">
+            <sam-filters-container>
+              <sam-collapsible [label]="'Status'" [startOpened]="true">
                 <samCheckbox
                 [(model)]="checkboxModel"
                 [name]="checkboxConfig.name"
@@ -18,14 +18,14 @@
                 [hasSelectAll]="checkboxConfig.hasSelectAll"
                 (modelChange)="activeFilter($event)">
                 </samCheckbox>
-              </samAccordionSection>
-            </samAccordion>
+              </sam-collapsible>
+            </sam-filters-container>
           </li>
         </ul>
       </nav>
     </div>
   </aside>
-  
+
   <div class="usa-width-three-fourths">
   	<div class="usa-width-one">
   		<h1 class="m_T-0 p_T-6x">SAM.gov Search Results</h1>
@@ -64,5 +64,5 @@
     </div>
     <br/><br/>
   </div>
-  
+
 </div>
