Change cursor style to pointer for print link

--- a/src/app/wage-determination/wage-determination.page.html
+++ b/src/app/wage-determination/wage-determination.page.html
@@ -61,7 +61,7 @@
 
       <!-- Print Link -->
       <div *ngIf="wageDetermination?.document" class="centered m_B-5x m_T-5x">
-        <a tabindex="0" (click)="openDocumentPrintPage()" (keyup.enter)="openDocumentPrintPage()">Printer Friendly Version</a>
+        <a class="print-link" tabindex="0" (click)="openDocumentPrintPage()" (keyup.enter)="openDocumentPrintPage()">Printer Friendly Version</a>
       </div>
     </section>
 
