--- a/src/styles/pages/_wage-determination.scss
+++ b/src/styles/pages/_wage-determination.scss
@@ -15,6 +15,10 @@
   .usa-unstyled-list li{
     margin-bottom: 5px;
   }
+  
+  .print-link{
+    cursor: pointer;
+  }
   /* MISC */
   /*============================*/
   samsidenav{
