--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -5,8 +5,8 @@
     </div>
     <div class="pull-right">
       <span *ngIf="isAdmin && isActiveAlert()" class="expire-alert-text">Expire</span>
-      <sam-toggle-switch *ngIf="isAdmin && isActiveAlert()" (switchStatusChange)="OnSwitchChange($event)" [disableSwitch]="switchDisable"></sam-toggle-switch>
-      <button *ngIf="isAdmin" class="usa-button-transparent" (click)="onEditClick()" [ngClass]="editDisabled && 'usa-button-transparent-disabled'"><span>Edit</span>&nbsp;<i class="fa fa-pencil"></i></button>
+      <sam-toggle-switch *ngIf="isAdmin && isActiveAlert()" (switchStatusChange)="OnSwitchChange($event)" [isSwitchOn]="expireAlert"></sam-toggle-switch>
+      <button *ngIf="isAdmin && !isExpiredAlert()" class="usa-button-transparent" (click)="onEditClick()" [ngClass]="editDisabled && 'usa-button-transparent-disabled'"><span>Edit</span>&nbsp;<i class="fa fa-pencil"></i></button>
     </div>
   </div>
   <div class="alert-item usa-grid-full">
