--- a/src/app/opportunity/display-template-demo/demo.page.html
+++ b/src/app/opportunity/display-template-demo/demo.page.html
@@ -1,4 +1,4 @@
-<display-page [attr.class]="'opportunity-page usa-grid'" [logoSrc]="logoUrl" [sidenavConfig]="sidenavModel">
+<display-page [attr.class]="'opportunity-page usa-grid'" [logoData]="logoData" [sidenavConfig]="sidenavModel">
 
 <div display-title>
   <ng-container *ngIf="opportunity">
