--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -58,6 +58,7 @@
 @import 'pages/users-directory';
 @import 'pages/ui-kit-demo';
 @import 'pages/access';
+@import 'pages/grant-access';
 @import 'pages/public-profile';
 @import 'pages/wage-determination';
 
