--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -1,11 +1,11 @@
 <div class="grant-access-page">
-  <div class="alert alert-success">
-    <div>perms: {{permissions | json}}</div>
-    <div>orgs: {{orgs | json}}</div>
-    <div>domain: {{domain | json}}</div>
-    <div>role: {{role | json}}</div>
-    <div>message: {{messages | json}}</div>
-  </div>
+  <!--<div class="alert alert-success">-->
+    <!--<div>perms: {{permissions | json}}</div>-->
+    <!--<div>orgs: {{orgs | json}}</div>-->
+    <!--<div>domain: {{domain | json}}</div>-->
+    <!--<div>role: {{role | json}}</div>-->
+    <!--<div>message: {{messages | json}}</div>-->
+  <!--</div>-->
   <agencyPicker
     [label]="'Organizations'"
     [multimode]="true"
