--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -14,7 +14,7 @@
   <samSelect name="role" label="Role" (modelChange)="onRoleChange($event)" [options]="roleOptions"></samSelect>
   <samSelect name="domain" label="Domain" (modelChange)="onDomainChange($event)" [options]="domainOptions"></samSelect>
   <ng-container *ngIf="true || role && domain && orgs.length">
-    <div class="m_T-2x">Permissions</div>
+    <div class="m_B-1x"><label>Permissions</label></div>
     <ul class="usa-grid-full usa-unstyled-list background-light p_All-4x">
       <li  *ngFor="let object of objects" class="object-item">
         <div class="object-title"><strong>{{object.label}}</strong></div>
