--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -100,11 +100,10 @@
         <ul class="usa-unstyled-list">
           <li [attr.id]="generateID(opportunityFields.Type, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.Type)">
             <strong>Opportunity Type: </strong>
+            <ng-container *ngIf="opportunity.data?.statuses?.isCanceled">Canceled </ng-container>
+            <ng-container *ngIf="!opportunity.data?.statuses?.isCanceled">Updated </ng-container>
             <ng-container *ngIf="opportunity.data?.type !== 'm'">{{ opportunity.data?.type | opportunityTypeLabel }}</ng-container>
-            <ng-container *ngIf="opportunity.data?.type === 'm'">{{ originalOpportunity?.data?.type | opportunityTypeLabel}}
-              <ng-container *ngIf="opportunity.data?.statuses?.isCanceled">(Canceled)</ng-container>
-              <ng-container *ngIf="!opportunity.data?.statuses?.isCanceled">(Update/Amendment)</ng-container>
-            </ng-container>
+            <ng-container *ngIf="opportunity.data?.type === 'm'">{{ originalOpportunity?.data?.type | opportunityTypeLabel}}</ng-container>
           </li>
           <li [attr.id]="generateID(opportunityFields.PostedDate, 'general')" *ngIf="shouldBeDisplayed(opportunityFields.PostedDate)">
             <strong>Update/Amendment Posted Date: </strong>
