--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -33,7 +33,7 @@
     <p class="pull-right">
       <a [routerLink]="['../access']"><button class="usa-button usa-button-outline">Cancel</button></a>
       &nbsp;
-      <button class="usa-button usa-button-primary">Grant</button>
+      <button class="usa-button usa-button-primary" (click)="onGrantClick()">Grant</button>
     </p>
   </div>
 </div>
