--- a/src/app/authentication/profile/reset/reset.component.html
+++ b/src/app/authentication/profile/reset/reset.component.html
@@ -19,6 +19,6 @@
 </div>
 
 <samAlert class="usa-alert-static" type="info" title="Migrate Your Roles">
-  If you have a user account at any of the <a [routerLink]="['/profile/migrations']" fragment="legacy-sites">websites</a> that are moving to the new SAM.gov,
-  you may migrate your roles and keep your same permissions. <a [routerLink]="['/profile/migrations']">Begin Now</a>.
+  If you have a user account at any of the <a routerLink="/profile/migrations" fragment="legacy-sites">websites</a> that are moving to the new SAM.gov,
+  you may migrate your roles and keep your same permissions. <a routerLink="/profile/migrations" fragment="top">Begin Now</a>.
 </samAlert>
