--- a/src/app/authentication/register/register-main.component.html
+++ b/src/app/authentication/register/register-main.component.html
@@ -38,7 +38,7 @@
       </fieldset>
       <fieldset>
         <div class="usa-button-controls">
-          <button type="button" class="usa-button-outline">Cancel</button>
+          <button type="button" class="usa-button-outline" (click)="cancel()">Cancel</button>
           <button type="submit">Submit</button>
         </div>
       </fieldset>
